# RogueLike

./: README.md  RogueLike.slnx  package-lock.json
RogueLike/: Program.cs  RogueLike.csproj  RogueLike.sln
RogueLike-Deluxe/: .gitignore  README.md  build.mjs  package-lock.json  package.json
RogueLike-Deluxe/src/: audio.ts  boons.ts  cinematics.ts  codex.ts  combat.ts  combatScene.ts  context.ts  core.ts  creed.ts  endlessScenes.ts  entities.ts  epicCombat.ts  epicMode.ts  epicScenes.ts  exploreScene.ts  game.ts  i18n.ts  input.ts  items.ts  legacy.ts  levels.ts  main.ts  maps.ts  menuScenes.ts  meta.ts  procgen.ts  quests.ts  render.ts  save.ts  scenes.ts  skills.ts  sprites.ts  titleScenes.ts
RogueLike-Deluxe/src-tauri/: Cargo.toml  tauri.conf.json
RogueLike-Deluxe/src-tauri/capabilities/: default.json
RogueLike-Deluxe/src-tauri/icons/: icon.icns
RogueLike-Deluxe/src-tauri/src/: lib.rs  main.rs
RogueLike-Deluxe/test/: sim.ts
RogueLike-Deluxe/tools/: make-icons.mjs
RogueLike/App/: GameContext.cs  TimeSystem.cs
RogueLike/App/Combat/: CombatActionResult.cs  CombatContext.cs  ICombatAction.cs
RogueLike/App/I18n/: Language.cs  Localizer.cs
RogueLike/Domain/: Direction.cs  GameMap.cs  Position.cs  TileType.cs
RogueLike/UI/: BossIntroScreen.cs  BossPhase2CinematicScreen.cs  CombatAnimations.cs  CombatScreen.cs  CombatTransition.cs  ConsoleInput.cs  ConsoleRenderer.cs  EndScreen.cs  HudPanel.cs  IntroCinematicScreen.cs  InventoryScreen.cs  JournalBox.cs  LegendarySwordCinematicScreen.cs  ProgressionScreen.cs  ScreenFX.cs
(+68 files in other folders)
