[package]
name = "sceaux-de-labime"
version = "1.0.0"
description = "Les Sceaux de l'Abîme - roguelike pixel art"
edition = "2021"

[lib]
name = "sceaux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
